fix [#34200] Metaball Tessellate error